v3.5.6 (XXXX-XX-XX)
-------------------

* Internal issue BTS-71: Fixed error handling regarding communication with the
  agency. This could in a specific case cause collection creation in a cluster
  report success when it failed.

* Fix unreasonable precondition on removeServer.

* Updated arangosync to 0.7.7.

* Fixed a document parsing bug in the Web UI. This issue occured in the
  document list view in case a document had an attribute called `length`.
  The result was an incorrect representation of the document preview.

* The Web UI now displays an error message inside the node information view in
  case the user has no access to retreive the neccessary information.

* Correct some log entries.

* The `_from` and `_to` attributes of an edge document can now be edited from
  within the UI.

* In case a document got requested via the UI of a collection which does not
  exist, the UI now properly displays an error view instead of having a bad
  display state.

* The Web UI is now reporting errors properly in case of editing ArangoSearch
  Views with invalid properties.

* Web UI: Removed unnecessary menubar entry in case of database node inspection.

* Fix undistribute-remove-after-enum-coll which would allow calculations to be
  pushed to a DBServer which are not allowed to run there.

* Removed the edge id's hover styling in case of embedded document editor in 
  the Web UI as this functionality is disabled. This was misleading because
  the elements are not clickable.

* The Web UI is not disabling the query import button after file upload takes
  place.

* In case of a graph deletion failure, the Web UI displays now the correct
  error message.

* Returned `AQL_WARNING()` to emit warnings from UDFs.

* Allows restoring collections from v3.3.0 with their all-numeric collection
  GUID values, by creating a new, unambiguous collection GUID for them.
  v3.3.0 had a bug because it created all-numeric GUID values, which can be