@@ -1,6 +1,11 @@
 v3.5.6 (XXXX-XX-XX)
 -------------------
 
+* Internal issue BTS-71: In a cluster, for collections in creation, suspend
+  supervision jobs concerning replication factor until creation is completed.
+  Previously, it could cause collection creation to fail (e.g. when a server
+  failed during creation), even when it didn't have to.
+
 * Internal issue BTS-71: Fixed error handling regarding communication with the
   agency. This could in a specific case cause collection creation in a cluster
   report success when it failed.
